<!--  
	    Copyright 2014 Simon Bourgarel

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
   
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <Button
        android:id="@+id/button_activity_schoice_rules"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
	    android:layout_marginLeft="10dip"
		android:layout_marginTop="10dip"
        android:text="@string/button_activity_schoice_rules_text" />    
    <Button
        android:id="@+id/button_activity_schoice_lienar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
	    android:layout_marginLeft="10dip"
		android:layout_marginTop="10dip"
        android:layout_below="@id/button_activity_schoice_rules"
        android:text="@string/button_activity_schoice_linear_text" />
    <Button
        android:id="@+id/button_activity_schoice_ncc3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
	    android:layout_marginLeft="10dip"
		android:layout_marginTop="10dip"
        android:layout_below="@id/button_activity_schoice_lienar"
        android:text="@string/button_activity_schoice_3ncc_text" />
    <Button
        android:id="@+id/button_activity_schoice_ncc4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
	    android:layout_marginLeft="10dip"
		android:layout_marginTop="10dip"
        android:layout_below="@id/button_activity_schoice_ncc3"
        android:text="@string/button_activity_schoice_4ncc_text" />


    <Button
        android:id="@+id/button_activity_schoice_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_activity_schoice_ncc4"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/button_activity_schoice_cancel_text" />

</RelativeLayout>